Added rank icons for Overwatch page and added a temporary file that will go into place once the Overwatch Role Queue begins in mid August

--- a/sub-sites/styles-overwatch.css
+++ b/sub-sites/styles-overwatch.css
@@ -211,33 +211,71 @@ img.overwatch-heal-speed {
     padding:10px;
     text-align: center;
 	font: bold;   
-    display: inline-block;
+    display: flex;
+	justify-content: center;
+	align-items: center;
 	border-top-right-radius: 20px;
 	border-bottom-right-radius: 20px;
     font-size: 16px;
 	width:60%;
 }	
-.skill-headline {
-	background-color: #A48FC0;
-    color: white;
-    padding:10px;
+.tank-skill-headline {
+	background-color: #8080ff;
+    color: #696969;
+    height: 40px;
     text-align: center;
 	font: bold;
-    display: inline-block;
+    display: flex;
+	justify-content: center;
+	align-items: center;
 	border-radius: 20px;
     font-size: 16px;
 	width:100%;
 }
-.sr-headline {
-	background-color: #7E5FA4;
-    color: white;
-    padding:10px;
+.damage-skill-headline {
+	background-color: #ff4d4d;
+    color: #696969;
+    height: 40px;
     text-align: center;
 	font: bold;
-    display: inline-block;
+    display: flex;
+	justify-content: center;
+	align-items: center;
 	border-radius: 20px;
     font-size: 16px;
 	width:100%;
+}
+.support-skill-headline {
+	background-color: #ffff99;
+    color: #696969;
+    height: 40px;
+    text-align: center;
+	font: bold;
+    display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 20px;
+    font-size: 16px;
+	width:100%;
+}
+
+.sr-headline {
+	background-color: #7E5FA4;
+    color: white;
+	height: 40px;
+    text-align: center;
+	font: bold;
+    display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 20px;
+    font-size: 16px;
+	width:100%;
+}
+.skill-icon {
+	height: 30px;
+	width: auto;
+	margin-left: 10px;
 }
 .hero-section {
 	display: flex;
